--- a/projeto1.html
+++ b/projeto1.html
@@ -34,7 +34,7 @@
             agendamento de consultas, controle do atendimento de clientes, envio de consultas para os médicos responsáveis pelo atendimento dos pacientes.</p>
             <p>O projeto foi desenvolvido utilizando as tecnologias python, com integração a um banco de dados MySQL para armazenamento de informações.</p>
             <p>Espero que você goste do projeto e fique à vontade para entrar em contato caso queira mais informações!</p>
-            <a href="portifolio.html" class="botao-voltar">Voltar para Home</a>
+            <a href="index.html" class="botao-voltar">Voltar para Home</a>
         </section>
     </body>
 </html>
