--- a/projeto2.html
+++ b/projeto2.html
@@ -34,7 +34,7 @@
             predizer qual é o automóvel ou animal. O Modelo Preditivo permite o reconhecimento de animais e automóveis.</p>
             <p>O projeto foi desenvolvido utilizando TensorFlow e as tecnologias python de Deep Learning, com integração a um Dataset Público chamado "cifar10" onde encontra-se imagens de automóveis e animais.</p>
             <p>Espero que você goste do projeto e fique à vontade para entrar em contato caso queira mais informações!</p>
-            <a href="portifolio.html" class="botao-voltar">Voltar para Home</a>
+            <a href="index.html" class="botao-voltar">Voltar para Home</a>
         </section>
     </body>
 </html>
