--- a/projeto1.html
+++ b/projeto1.html
@@ -25,12 +25,12 @@
         </header>
         
         <section id="projetoClinica">
-            <h2>Projeto de Gerenciamento de Clínica</h2>
+            <h2>Projeto de Gerenciamento de uma Clínica</h2>
             <img src="imagens/medico.png" alt="Projeto de Gerenciamento de Clínica">
             <img src="imagens/atendimento.png" alt="Projeto de Gerenciamento de Clínica">
             <img src="imagens/consulta.png" alt="Projeto de Gerenciamento de Clínica">
             <img src="imagens/lista_pacientes.png" alt="Projeto de Gerenciamento de Clínica">
-            <p>Este é o "Projeto de Gerenciamento de Clínica", onde desenvolvi um sistema em python para facilitar o gerenciamento de uma clínica médica. O sistema permite o cadastro de medicos e recepcionistas, 
+            <p>Este é o "Projeto de Gerenciamento de Clínica", onde desenvolvi um sistema em python para facilitar o gerenciamento de uma clínica médica. O sistema permite o cadastro de médicos e recepcionistas, 
             agendamento de consultas, controle do atendimento de clientes, envio de consultas para os médicos responsáveis pelo atendimento dos pacientes.</p>
             <p>O projeto foi desenvolvido utilizando as tecnologias python, com integração a um banco de dados MySQL para armazenamento de informações.</p>
             <p>Espero que você goste do projeto e fique à vontade para entrar em contato caso queira mais informações!</p>
